# plasma-applet-caffeine-plus

./: .gitignore  CMakeLists.txt  README.md  dev-build.sh  install.sh  shell-restart.sh
plasmoid/: metadata.desktop
plasmoid/contents/code/: layout.jsc
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: CaffeinePlus.qml  Menu.qml  Misc.qml  list.qml  main.qml  windows.qml
plasmoid/contents/ui/config/: ConfigAdvanced.qml  ConfigGeneral.qml  app.qml
plugin/: CMakeLists.txt  caffeine-plus.cpp  caffeine-plus.h  kf5_org.kde.Solid.PowerManagement.PolicyAgent.bak.xml  plasmoidplugin.cpp  qmldir
translations/: CMakeLists.txt  Messages.sh  TRANSLATORS_README  update-translations.sh
translations/po/: plasma_applet_org.kde.caffeine-plus.pot  plasma_applet_org.kde.caffeine-plus_en.po  plasma_applet_org.kde.caffeine-plus_nl_NL.po  plasma_applet_org.kde.caffeine-plus_zh_CN.po
